[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["olaola-0 <isholamyson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
jupyter = "^1.0.0"
icecream = "^2.1.3"
pandas = "^2.1.1"
pyarrow = "^13.0.0"
tqdm = "^4.66.1"
plotly = "^5.17.0"
scikit-learn = "^1.3.1"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
optuna = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
